# copilot-lm-proxy

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: demo.cast
examples/: async_usage.py  basic_usage.py  structured_output.py
scratch/ralph/: READY_TO_MERGE.md  native-async-await-support-for-the-python-client.md  registry.json
scratch/ralph/native-async-await-support-for-the-python-client-20260328-152143/: code-review.md  codebase-profile.md  costs.json  directive-synced-20260328-154042.md  draft-prd-review.md  draft-prd.json  orchestrator-session.id  prd.json  prd.md  presentation.md  progress.json  progress.md  summary.md
scratch/ralph/native-async-await-support-for-the-python-client-20260328-152143/logs/: code-sync-state.json
scripts/: gen_demo.py  gen_demo_svg.py
src/copilot_proxy/: __init__.py  client.py  client_temp.py
tests/: conftest.py  test_async_chat.py  test_async_client.py  test_async_client_basic.py  test_async_module_functions.py  test_client.py  test_integration.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
