[project]
name = "copilot-proxy"
version = "0.1.0"
description = "Python client for accessing GitHub Copilot LLMs via local proxy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot_proxy"]
